# intelligent-analysis-agent

./: .env.example  .gitignore  AGENTS.md  DATA_SKILL_KNOWLEDGE_E2E_PLAN.md  E2E_VALIDATION_REPORT.md  PROJECT_REMEDIATION_GUIDE.md  README.md  analyst_prompt.md  data_analysis_sandbox.py  pyproject.toml  sandbox.env  sandbox_proxy_extension.py  start.sh  start_sandbox_server.sh  system_prompt.md
app/: __init__.py  config.py  database.py  main.py  tasks.py
app/api/: __init__.py  auth.py  conversation.py  deps.py  files.py  knowledge.py  kuncode.py  plans.py  sandbox.py  sessions.py  system_prompt.py
app/formatters/: __init__.py  anthropic_formatter.py  truncated_formatter.py
app/models/: __init__.py  agent_state.py  file.py  knowledge.py  sandbox.py  session.py  system_prompt.py  user.py
app/repositories/: __init__.py  file_repo.py  knowledge_repo.py  session_repo.py  state_repo.py  user_repo.py
app/schemas/: __init__.py  file.py  knowledge.py  session.py  user.py
app/services/: __init__.py  agent_service.py  (+11 more)
docs/: README.md
embedding/: docker-compose.yml
frontend/: html-editor.html  index.html  package-lock.json  package.json  vite.config.ts
mcp_knowledge_server/: __init__.py  server.py
sandbox_image/: Dockerfile  app.py  kuncode.json
scripts/: add_knowledge_index.py  check_message_format.py  fix_data_consistency.py  fix_missing_tool_results.py  fix_session_tool_results.py  generate_extended_data.py  init_knowledge_base.py  rebuild_milvus_from_postgres.py  start.ps1  sync_milvus_to_postgres.py
tests/: __init__.py  test_task_regressions.py
(+89 files in other folders)
