[project]
name = "data-analysis-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentscope==1.0.11",
    "agentscope-runtime==1.0.5",
    "anthropic==0.49.0", 
    "celery[redis]>=5.4.0",
    "fastmcp>=2.14.3",
    "httpx>=0.28.1",
    "mcp>=1.25.0",
    "mem0ai>=1.0.1",
    "pymilvus>=2.6.6",
    "python-dotenv>=1.2.1",
    "redis>=5.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "shap>=0.49.1",
    # 工程化依赖
    "tortoise-orm[asyncpg]>=0.24.0",
    "pydantic-settings>=2.0.0",
    "bcrypt>=4.2.0",
    "pyjwt>=2.9.0",
    "aerich>=0.7.0",
    "zai-sdk>=0.2.1",
]

[tool.aerich]
tortoise_orm = "app.database.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
